[package]
name = "opentelemetry-http"
version = "0.31.0"
description = "Helper implementations for sending HTTP requests. Uses include propagating and extracting context over http, exporting telemetry, requesting sampling strategies."
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-http"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-http"
keywords = ["opentelemetry", "tracing", "context", "propagation"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"
autobenches = false

[features]
default = ["internal-logs"]
hyper = ["dep:http-body-util", "dep:hyper", "dep:hyper-util", "dep:tokio"]
reqwest = ["dep:reqwest"]
reqwest-blocking = ["dep:reqwest", "reqwest/blocking"]
reqwest-rustls = ["dep:reqwest", "reqwest/rustls-tls-native-roots"]
reqwest-rustls-webpki-roots = ["dep:reqwest", "reqwest/rustls-tls-webpki-roots"]
internal-logs = ["opentelemetry/internal-logs"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, features = ["client-legacy", "http1", "http2"], optional = true }
opentelemetry = { workspace = true, features = ["trace"] }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, features = ["time"], optional = true }

[lints]
workspace = true

[lib]
bench = false
