[package]
name = "opentelemetry-jaeger-propagator"
version = "0.30.0"
description = "Jaeger propagator for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-jaeger-propagator"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-jaeger-propagator"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "jaeger", "propagator"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"
autobenches = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
opentelemetry = { version = "0.30", default-features = false, features = [
    "trace",
], path = "../opentelemetry" }

[dev-dependencies]
opentelemetry = { features = ["testing"], path = "../opentelemetry" }

[features]
default = ["internal-logs"]
internal-logs = ["opentelemetry/internal-logs"]

[lints]
workspace = true

[lib]
bench = false
