[package]
name = "opentelemetry-jaeger-propagator"
version = "0.31.0"
description = "Jaeger propagator for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-jaeger-propagator"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-jaeger-propagator"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "jaeger", "propagator"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"
autobenches = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
opentelemetry = { workspace = true, features = ["trace"] }

[dev-dependencies]
opentelemetry = { workspace = true, features = ["testing"] }

[features]
default = ["internal-logs"]
internal-logs = ["opentelemetry/internal-logs"]

[lints]
workspace = true

[lib]
bench = false
