[package]
name = "opentelemetry-jaeger"
version = "0.16.0"
description = "Jaeger exporter for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-jaeger"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-jaeger"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "jaeger", "tracing", "async"]
license = "Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-std = { version = "= 1.10.0", optional = true }
async-trait = "0.1"
base64 = { version = "0.13", optional = true }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"], optional = true }
futures-executor = "0.3"
headers = { version = "0.3.2", optional = true }
http = { version = "0.2", optional = true }
isahc = { version = "1.4", default-features = false, optional = true }
js-sys = { version = "0.3", optional = true }
once_cell = "1.12"
opentelemetry = { version = "0.17", default-features = false, features = ["trace"], path = "../opentelemetry" }
opentelemetry-http = { version = "0.6", path = "../opentelemetry-http", optional = true }
opentelemetry-semantic-conventions = { version = "0.9", path = "../opentelemetry-semantic-conventions" }
pin-project = { version = "1.0", optional = true }
reqwest = { version = "0.11", default-features = false, optional = true }
surf = { version = "2.0", default-features = false, optional = true }
thiserror = "1.0"
thrift = "0.16"
tokio = { version = "1.0", features = ["net", "sync"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4.18", optional = true }

tonic = { version = "0.6.2", optional = true }
prost = { version = "0.9.0", optional = true }
prost-types = { version = "0.9.0", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["net", "sync"] }
bytes = "1"
futures-executor = "0.3"
opentelemetry = { default-features = false, features = ["trace", "testing"], path = "../opentelemetry" }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Headers',
    'Request',
    'RequestCredentials',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]
optional = true

[features]
full = [
    "collector_client",
    "isahc_collector_client",
    "reqwest_collector_client",
    "reqwest_blocking_collector_client",
    "surf_collector_client",
    "wasm_collector_client",
    "rt-tokio",
    "rt-tokio-current-thread",
    "rt-async-std",
    "integration_test"
]
default = []
collector_client = ["http", "opentelemetry-http"]
isahc_collector_client = ["isahc", "opentelemetry-http/isahc"]
reqwest_blocking_collector_client = ["reqwest/blocking", "collector_client", "headers", "opentelemetry-http/reqwest"]
reqwest_collector_client = ["reqwest", "collector_client", "headers", "opentelemetry-http/reqwest"]
surf_collector_client = ["surf", "collector_client", "opentelemetry-http/surf"]
wasm_collector_client = [
    "base64",
    "futures-util",
    "http",
    "js-sys",
    "pin-project",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "web-sys",
]
rt-tokio = ["tokio", "opentelemetry/rt-tokio"]
rt-tokio-current-thread = ["tokio", "opentelemetry/rt-tokio-current-thread"]
rt-async-std = ["async-std", "opentelemetry/rt-async-std"]
integration_test = ["tonic", "prost", "prost-types", "rt-tokio", "collector_client"]
