[package]
name = "opentelemetry-prometheus"
version = "0.31.1"
description = "Prometheus exporter for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-prometheus"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-prometheus"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "prometheus", "metrics", "async"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.81.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
once_cell = { workspace = true }
opentelemetry = { workspace = true, features = ["metrics", "internal-logs"] }
opentelemetry_sdk = { workspace = true, features = ["metrics", "experimental_metrics_custom_reader"] }
prometheus = { version = "0.14", default-features = false }
tracing = { workspace = true, optional = true } # optional for opentelemetry internal logging

[dev-dependencies]
opentelemetry-semantic-conventions = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["internal-logs"]
prometheus-encoding = []
internal-logs = ["tracing"]
