[package]
name = "opentelemetry-semantic-conventions"
version = "0.14.0"
description = "Semantic conventions for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-semantic-conventions"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-semantic-conventions"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "tracing", "async"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
opentelemetry = { version = "0.22", default-features = false, path = "../opentelemetry" } # for doctests
opentelemetry_sdk = { version = "0.22", features = ["trace"], path = "../opentelemetry-sdk" } # for doctests
