[package]
name = "opentelemetry-semantic-conventions"
version = "0.31.0"
description = "Semantic conventions for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-semantic-conventions"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-semantic-conventions"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "tracing", "async"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"
autobenches = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
semconv_experimental = []

[dev-dependencies]
opentelemetry = { workspace = true } # for doctests
opentelemetry_sdk = { workspace = true, features = ["trace"] } # for doctests

[lints]
workspace = true

[lib]
bench = false
